# libopenexr

./: .Rbuildignore  .gitignore  DESCRIPTION  OpenEXR.Rproj  README.Rmd  README.md  air.toml  cleanup  configure.ac  cran-comments.md
.github/workflows/: R-CMD-check.yaml  fedora-r-devel.yaml  rhub.yaml
R/: read_write_exr.R
man/: read_exr.Rd  write_exr.Rd
src/: Makevars.in  Makevars.win.in  r-api.cpp
src/OpenEXR/cmake/: OpenEXRConfig.h.in
src/OpenEXR/src/lib/Iex/: IexBaseExc.cpp  IexThrowErrnoExc.cpp
src/OpenEXR/src/lib/IlmThread/: IlmThreadProcessGroup.h
src/OpenEXR/src/lib/OpenEXR/: ImfAttribute.h  ImfBoxAttribute.cpp  ImfBytesAttribute.cpp  ImfCRgbaFile.cpp  ImfChannelListAttribute.cpp  ImfChromaticities.cpp  ImfChromaticitiesAttribute.cpp  ImfCompressionAttribute.cpp  ImfDeepImageStateAttribute.cpp  ImfDoubleAttribute.cpp  ImfEnvmapAttribute.cpp  ImfFloatAttribute.cpp  ImfFloatVectorAttribute.cpp  ImfIDManifestAttribute.cpp  ImfIDManifestAttribute.h  ImfInputPart.cpp  ImfIntAttribute.cpp  ImfKeyCodeAttribute.cpp  ImfLineOrderAttribute.cpp  ImfMatrixAttribute.cpp  ImfMatrixAttribute.h  ImfMisc.cpp  ImfName.h  ImfOpaqueAttribute.cpp  ImfPreviewImageAttribute.cpp  ImfRationalAttribute.cpp  ImfStandardAttributes.cpp  ImfStdIO.cpp  ImfStringAttribute.cpp  ImfStringVectorAttribute.cpp  ImfTileDescriptionAttribute.cpp  ImfTimeCodeAttribute.cpp  ImfVecAttribute.cpp  ImfVecAttribute.h  ImfZipCompressor.cpp  dwaLookups.cpp
src/OpenEXR/src/lib/OpenEXRCore/: CMakeLists.txt  compression.c  internal_b44_table_init.c  internal_dwa_table_init.c  internal_structs.c  internal_thread.h  internal_zip.c  string.c
src/OpenEXR/src/lib/OpenEXRUtil/: ImfCheckFile.cpp
tests/: exr-metadata.R
tools/: config.R  remove_stderr.R  replace-block.R  search-replace.R  write-runtime-metadata.R
tools/config/: configure.R
tools/patches/: IlmThreadPool.Ctor.from.txt  IlmThreadPool.Ctor.to.txt  IlmThreadPool.Data.from.txt  IlmThreadPool.Data.to.txt
